--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-image-crop": "^11.0.10",
     "react-markdown": "^9.0.1",
     "remark-gfm": "^4.0.0",
     "sonner": "^1.5.0",
