--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,7 @@ rich==13.7.1
 shellingham==1.5.4
 sniffio==1.3.1
 starlette==0.37.2
-tqdm==4.66.4
+tqdm>=4.66.4
 typer==0.12.3
 typing_extensions==4.12.2
 urllib3==2.2.3
@@ -39,3 +39,5 @@ uvloop==0.19.0
 watchfiles==0.22.0
 websockets==12.0
 slowapi
+supabase==2.15.1
+vercel-blob==0.4.0
