--- a/vercel.json
+++ b/vercel.json
@@ -4,13 +4,7 @@
     "api/index.py": {
       "maxDuration": 60,
       "memory": 1024,
-      "includeFiles": [
-        "api/core/**",
-        "api/models/**",
-        "api/services/**",
-        "api/utils/**",
-        "assets/**"
-      ]
+      "includeFiles": "{api/core/**,api/models/**,api/services/**,api/utils/**,assets/**}"
     }
   },
   "routes": [
