--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@ai-sdk/ui-utils": "^0.0.20",
     "@radix-ui/react-slot": "^1.1.0",
+    "@supabase/supabase-js": "^2.49.5",
     "@types/node": "20.2.4",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
