--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "18.2.0",
     "react-image-crop": "^11.0.10",
     "react-markdown": "^9.0.1",
+    "react-swipeable": "^7.0.2",
     "remark-gfm": "^4.0.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.4",
