--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nextjs-fastapi",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "pnpm@10.11.0",
   "scripts": {
     "fastapi-dev": ".venv/bin/python -m uvicorn api.index:app --reload",
     "fastapi-debug": "cross-env LOG_LEVEL=DEBUG .venv/bin/python -m uvicorn api.index:app --reload --log-level debug",
