--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
   "functions": {
     "api/index.py": {
+      "runtime": "python3.11",
       "maxDuration": 120,
       "memory": 1024,
       "includeFiles": "{api/core/**,api/models/**,api/services/**,api/utils/**,assets/**}"
