--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "date-fns": "^4.1.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "exifr": "^7.1.3",
     "framer-motion": "^11.11.17",
     "geist": "^1.3.1",
     "lucide-react": "^0.460.0",
@@ -46,7 +47,6 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "3.4.15",
     "tailwindcss-animate": "^1.0.7",
-    "types": "link:next-themes/dist/types",
     "typescript": "5.0.4",
     "usehooks-ts": "^3.1.0"
   },
