--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "next-dev": "next dev",
     "dev": "concurrently \"npm run next-dev\" \"npm run fastapi-dev\"",
     "debug": "concurrently \"npm run next-dev\" \"npm run fastapi-debug\"",
-    "cache-hero-cards": "node scripts/cache-hero-cards.js",
-    "prebuild": "npm run cache-hero-cards",
+    "generate-hero-cache": "node scripts/generate-hero-cache.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
