--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,5 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.11"
 dependencies = [
+    "requests>=2.32.3",
 ]
