--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,4 +5,13 @@ description = "Add your description here"
 requires-python = ">=3.11"
 dependencies = [
     "requests>=2.32.3",
+    "fastapi>=0.111.1",
+    "uvicorn>=0.30.3",
+    "python-multipart>=0.0.9",
+    "pillow",
+    "supabase>=2.15.1",
+    "vercel-blob>=0.4.0",
+    "qrcode[pil]>=7.4.2",
+    "openai>=1.79.0",
+    "python-dotenv>=1.0.1",
 ]
